# RAG_Medicine

./: README.md
medi.mate-main/: README.md  pyproject.toml  requirements.txt
medi.mate-main/data/: messages.json  sessions.json  users.json
medi.mate-main/data/vectors/: default.json  otc_medicines.json
medi.mate-main/src/: auth.py  config.py  memory.py  otc_manager.py  vector_store.py
